--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Celebration</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Birthday Card</title>
-</head>
-<body>
-    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Tiger</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">VENUE</a>
-  </div>
-</div>
-</body>
+  </head>
+  <body>
+    <h4 style="text-align: center; font-size: 30px; text-decoration: underline">
+      BIRTHDAY CELEBRATION
+    </h4>
+    <div class="container d-flex justify-content-center">
+      <div class="card" style="width: 20rem">
+        <img src="photo1.jpeg" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Tiger</h5>
+          <p class="card-text" style="font-family: Arial, Helvetica, sans-serif">
+            Birthday are simply incomplete without the company of amazing
+            friends like you.Save the date for my birthday bash, and let's have
+            a blast together!
+          </p>
+          <p>MONDAY, 8th DEC ,2025 AT 7:00 PM</p>
+          <a href="#" class="btn btn-primary"> Venue</a>
+        </div>
+      </div>
+    </div>
+    <script
+      scr="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    ></script>
+  </body>
 </html>
-
